<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin"
        android:animateLayoutChanges="true">

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:customTextInputLayout_caption="@string/checkout_sdd_iban">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_iban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapCharacters|textNoSuggestions" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_ibanSuggestions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            app:customTextInputLayout_caption="@string/checkout_sdd_account_holder_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_accountHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName|textCapWords" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <!-- Left padding to align with other views -->
        <com.adyen.checkout.ui.internal.common.view.FixedSwitchCompat
            android:id="@+id/switchCompat_consent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:padding="@dimen/standard_quarter_margin"
            android:text="@string/checkout_sdd_consent" />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            tools:text="@string/checkout_pay_amount_format" />

        <TextView
            android:id="@+id/textView_surcharge"
            style="@style/Checkout.TextAppearance.Tertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            tools:text="@string/checkout_surcharge_total_amount_format" />

    </LinearLayout>

</ScrollView>
