<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:theme="@style/Theme.AppCompat.Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin"
        android:animateLayoutChanges="true"
        android:clipChildren="false"
        android:clipToPadding="false">

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:id="@+id/customTextInputLayout_holderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:customTextInputLayout_caption="@string/checkout_card_holder_name_hint"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_holderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapWords|textPersonName"
                android:nextFocusDown="@+id/editText_cardNumber"
                android:nextFocusForward="@+id/editText_cardNumber" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:customTextInputLayout_caption="@string/checkout_card_card_number_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:nextFocusDown="@+id/editText_expiryDate"
                android:nextFocusForward="@+id/editText_expiryDate" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_cardTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_half_margin"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/standard_half_margin"
                android:layout_marginRight="@dimen/standard_half_margin"
                app:customTextInputLayout_caption="@string/checkout_card_expiry_date_caption"
                app:customTextInputLayout_hint="@string/checkout_card_expiry_date_hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_expiryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:maxLength="7"
                    android:nextFocusDown="@+id/editText_securityCode"
                    android:nextFocusForward="@+id/editText_securityCode" />

            </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

            <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
                android:id="@+id/customTextInputLayout_securityCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/standard_half_margin"
                android:layout_marginStart="@dimen/standard_half_margin"
                app:customTextInputLayout_caption="@string/checkout_card_security_code_hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_securityCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"
                    android:nextFocusDown="@+id/editText_phoneNumber"
                    android:nextFocusForward="@+id/editText_phoneNumber" />

            </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        </LinearLayout>

        <com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout
            android:id="@+id/customTextInputLayout_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:customTextInputLayout_caption="@string/checkout_card_cup_secure_plus_phone_number_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:nextFocusDown="@+id/spinner_installments"
                android:nextFocusForward="@+id/spinner_installments" />

        </com.adyen.checkout.ui.internal.common.view.CustomTextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout_installmentsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/standard_quarter_margin"
                android:layout_weight="1"
                android:text="@string/checkout_card_installments" />

            <Spinner
                android:id="@+id/spinner_installments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:nextFocusDown="@+id/switchCompat_storeDetails"
                android:nextFocusForward="@+id/switchCompat_storeDetails" />

        </LinearLayout>

        <!-- Left padding to align with other views -->
        <com.adyen.checkout.ui.internal.common.view.FixedSwitchCompat
            android:id="@+id/switchCompat_storeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:paddingStart="@dimen/standard_quarter_margin"
            android:paddingLeft="@dimen/standard_quarter_margin"
            android:checked="false"
            android:text="@string/checkout_store_details"
            android:nextFocusDown="@+id/button_pay"
            android:nextFocusForward="@+id/button_pay"
            tools:ignore="RtlSymmetry"/>

        <Button
            android:id="@+id/button_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            tools:text="@string/checkout_pay_amount_format" />

        <TextView
            android:id="@+id/textView_surcharge"
            style="@style/Checkout.TextAppearance.Tertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            tools:text="@string/checkout_surcharge_total_amount_format" />

    </LinearLayout>

</ScrollView>
