<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:theme="@style/Theme.AppCompat">

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="@dimen/progress_dialog_size"
        android:layout_height="@dimen/progress_dialog_size"
        android:layout_margin="@dimen/standard_margin"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/frameLayout_bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true">

        <FrameLayout
            android:id="@+id/frameLayout_fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
